--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,33 @@
 version: '3.8'
-
 services:
-  webserver:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "99:80"
-    volumes:
-      - ./html:/var/www/html
-    depends_on:
-      - db
   db:
-    image: mysql:8
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: testdb
-      MYSQL_USER: testuser
-      MYSQL_PASSWORD: testpass
+    image: mysql
+    container_name: linksdb
     ports:
-      - "3307:3306"
+      - '3306:3306'
+    environment:
+      - MYSQL_DATABASE=linksdb
+      - MYSQL_USER=fazt
+      - MYSQL_PASSWORD=mypassword
+      - MYSQL_ROOT_PASSWORD=mypassword
+    command: >-
+      --default-authentication-plugin=mysql_native_password
+      --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
-      - db_data:/var/lib/mysql
-
-volumes:
-  db_data:
+      - './database/db.sql:/docker-entrypoint-initdb.d/db.sql'
+  # app:
+  #   image: node:18
+  #   container_name: linksapp
+  #   restart: on-failure
+  #   ports:
+  #     - '4000:4000'
+  #   environment:
+  #     - NODE_ENV=development
+  #     - DATABASE_HOST=db
+  #     - DATABASE_USER=fazt
+  #     - DATABASE_PASSWORD=mypassword
+  #     - DATABASE_NAME=linksdb
+  #   volumes:
+  #     - '.:/app'
+  #   depends_on:
+  #     - db
